<resources>
    <string name="app_name">好多鱼</string>
    <string name="loading_start">loading...</string>
    <string name="first_fragment_wdqb">我的钱包</string>
    <string name="first_fragment_grck">个人仓库</string>
    <string name="first_fragment_qbsc">钱包商城</string>
    <string name="first_fragment_jfsc">积分商城</string>
    <string name="first_fragment_xsqd">新手抢单区</string>
    <string name="first_fragment_jrqd">已签到</string>
    <string name="first_fragment_jrwqd">未签到</string>
    <string name="first_fragment_jyjl">交易记录</string>
    <string name="first_fragment_wdscjy">我的商城交易</string>
    <string name="first_fragment_dhjl">兑换记录</string>
    <string name="first_fragment_tzgg">通知公告</string>
    <string name="first_fragment_zxdt">最新动态</string>
    <string name="first_fragment_tgewm">推广二维码</string>
    <string name="first_fragment_hqgdkf">获取更多客户</string>
    <string name="first_fragment_wddd">我的订单</string>

    <string name="second_fragment_tgljsy">推广累计收益</string>


    <string name="my_warehouse_activity_title">我的仓库</string>
    <string name="my_wallet_activity_title">我的钱包</string>
    <string name="my_wallet_item_qbye">钱包余额</string>
    <string name="my_wallet_item_zrsy">昨日收益：</string>
    <string name="my_wallet_item_zrzc">昨日支出：</string>


    <string name="my_wallet_detail_activity_title">钱包明细</string>
    <string name="my_wallet_detail_activity_name">钱包余额</string>
    <string name="my_integral_detail_activity_title">积分明细</string>
    <string name="my_integral_detail_activity_name">积分余额</string>

    <string name="wallet_store_activity_title">钱包商城</string>
    <string name="notify_list_activity_title">通知公告</string>

    <string name="addres_details_activity_name_hint">请输入收件人姓名</string>
    <string name="addres_details_activity_phone_hint">请输入收件人电话</string>
    <string name="addres_details_activity_province_hint">请输入收件人省份</string>
    <string name="addres_details_activity_city_hint">请输入收件人城市</string>
    <string name="addres_details_activity_address_hint">请输入收件人详细地址</string>
    <string name="addres_details_activity_title">地址信息</string>


    <string name="real_name_activity_title">实名认证</string>
    <string name="real_name_activity_hint">请输入真实姓名</string>
    <string name="real_name_activity_code">请输入正确身份证号</string>
    <string name="user_info_activity_title">会员信息</string>


    <string name="change_psw_activity_title">修改密码</string>
    <string name="change_psw_activity_old_psw_hint">请输入旧密码</string>
    <string name="change_psw_activity_new_psw_hint">请输入6-18位数密码</string>
    <string name="change_psw_activity_psw_hint">请再次输入密码</string>


    <string name="login_activity_phone_hint">请输入您的注册手机号</string>
    <string name="login_activity_psw_hint">请输入您的密码</string>


    <string name="register_activity_phone_hint">请输入手机号</string>
    <string name="register_activity_smscode_hint">请输入短信验证码</string>
    <string name="register_activity_user_name_hint">请输入真实姓名</string>
    <string name="register_activity_recommend_hint">请输入推广人手机号码</string>


    <string name="group_list_activity_title">我的直推</string>
    <string name="retail_list_activity_title">我的二级</string>


    <string name="pay_order_activity_pay_title">支付详情</string>
    <string name="pay_order_activity_order_title">订单详情</string>

    <string name="pay_account_activity_title">支付宝账号</string>

    <string name="qr_code_activity_title">推广二维码</string>


</resources>
