<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--钱包商城-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/y25"
        android:background="@color/white"
        android:paddingTop="@dimen/y25">
        <LinearLayout
            android:id="@+id/ll_wallet_store"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/x45"
                android:layout_height="@dimen/x45"
                android:scaleType="fitXY"
                android:src="@mipmap/first_wallet_store_ico" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y24"
                android:includeFontPadding="false"
                android:text="@string/first_fragment_qbsc"
                android:textColor="#333333"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_integral_store"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/x45"
                android:layout_height="@dimen/x45"
                android:scaleType="fitXY"
                android:src="@mipmap/first_integral_ico" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y24"
                android:includeFontPadding="false"
                android:text="@string/first_fragment_jfsc"
                android:textColor="#333333"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_neophyte_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/x45"
                android:layout_height="@dimen/x45"
                android:scaleType="fitXY"
                android:src="@mipmap/first_neophyte_ico" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y24"
                android:includeFontPadding="false"
                android:text="@string/first_fragment_xsqd"
                android:textColor="#333333"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sign_in_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/x45"
                android:layout_height="@dimen/x45"
                android:scaleType="fitXY"
                android:src="@mipmap/first_sign_in_ico" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y24"
                android:includeFontPadding="false"
                android:text="@string/first_fragment_jrwqd"
                android:textColor="#333333"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y20"
        android:background="#f8f9fb" />

    <!--交易记录-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/x30"
        android:paddingRight="@dimen/x30"
        android:paddingTop="@dimen/y20"
        android:paddingBottom="@dimen/y20"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y150"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_transaction_history"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#f3f4f5"
                android:layout_weight="1"
                android:paddingLeft="@dimen/x20"
                android:paddingRight="@dimen/x20"
                >
                <TextView
                    android:id="@+id/tv_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y40"
                    android:includeFontPadding="false"
                    android:text="@string/first_fragment_jyjl"
                    android:textColor="@color/rgb_222222"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_transaction"
                    android:layout_marginTop="@dimen/y15"
                    android:includeFontPadding="false"
                    android:text="@string/first_fragment_wdscjy"
                    android:textColor="@color/rgb_999999"
                    android:textSize="12sp" />
                <ImageView
                    android:layout_width="@dimen/x126"
                    android:layout_height="@dimen/x126"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@mipmap/first_transaction_ico" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_exchange_history"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#f3f4f5"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/x20"
                android:paddingLeft="@dimen/x20"
                android:paddingRight="@dimen/x20"
                >
                <TextView
                    android:id="@+id/tv_exchange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y40"
                    android:includeFontPadding="false"
                    android:text="@string/first_fragment_dhjl"
                    android:textColor="@color/rgb_222222"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_exchange"
                    android:layout_marginTop="@dimen/y15"
                    android:includeFontPadding="false"
                    android:text="@string/first_fragment_wdscjy"
                    android:textColor="@color/rgb_999999"
                    android:textSize="12sp" />


                <ImageView
                    android:layout_width="@dimen/x126"
                    android:layout_height="@dimen/x126"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@mipmap/first_exchange_ico" />


            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y150"
            android:layout_marginTop="@dimen/y10"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:id="@+id/rl_notify"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#f3f4f5"
                android:paddingLeft="@dimen/x20"
                android:paddingRight="@dimen/x20"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_notify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y40"
                    android:includeFontPadding="false"
                    android:text="@string/first_fragment_tzgg"
                    android:textColor="@color/rgb_222222"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_notify"
                    android:layout_marginTop="@dimen/y15"
                    android:includeFontPadding="false"
                    android:text="@string/first_fragment_zxdt"
                    android:textColor="@color/rgb_999999"
                    android:textSize="12sp" />


                <ImageView
                    android:layout_width="@dimen/x126"
                    android:layout_height="@dimen/x126"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@mipmap/first_notify_ico" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_qrcode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#f3f4f5"
                android:paddingLeft="@dimen/x20"
                android:paddingRight="@dimen/x20"
                android:layout_marginLeft="@dimen/x20"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_qrcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y40"
                    android:includeFontPadding="false"
                    android:text="@string/first_fragment_tgewm"
                    android:textColor="@color/rgb_222222"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_qrcode"
                    android:layout_marginTop="@dimen/y15"
                    android:includeFontPadding="false"
                    android:text="@string/first_fragment_hqgdkf"
                    android:textColor="@color/rgb_999999"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="@dimen/x126"
                    android:layout_height="@dimen/x126"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@mipmap/first_qrcode_ico" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y148"
        android:layout_marginLeft="@dimen/x24"
        android:layout_marginRight="@dimen/x24"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:src="@mipmap/first_head_banner_ico" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/y20"
        android:paddingTop="@dimen/y20"
        android:paddingBottom="@dimen/y16"
        android:paddingLeft="@dimen/x24"
        android:paddingRight="@dimen/x24">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_fragment_wddd"
            android:textColor="@color/rgb_333333"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginLeft="@dimen/x24"
        android:layout_marginRight="@dimen/x24"
        android:background="@color/rgb_e2e2e2" />


</LinearLayout>
